force-app/main/default/objects/LLC_BI__Deposit__c/fields/cs_Account_Number_ACH_Int__c.field-meta.xml
<CustomField>
    <fullName>cs_Account_Number_ACH_Int__c</fullName>
    <inlineHelpText>Required if Interest Payment Type is &quot;Automatic Transfer (ACH)&quot; and the account to receive interest is an external account.</inlineHelpText>
    <label>External Account to Receive Interest</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>