force-app/main/default/objects/LLC_BI__Deposit__c/fields/cs_Bank_Name_ACH_Int__c.field-meta.xml
<CustomField>
    <fullName>cs_Bank_Name_ACH_Int__c</fullName>
    <inlineHelpText>Required if Interest Payment Type is &quot;Automatic Transfer (ACH)&quot; and the account to receive interest is an external account.</inlineHelpText>
    <label>Bank to Receive Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>