force-app/main/default/objects/LLC_BI__Deposit__c/fields/cs_Personal_or_Business_Account_ACH_Int__c.field-meta.xml
<CustomField>
    <fullName>cs_Personal_or_Business_Account_ACH_Int__c</fullName>
    <label>Personal or Business Account?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>