force-app/main/default/objects/LLC_BI__Deposit__c/fields/cs_Title_of_Account_ACH_Int__c.field-meta.xml
<CustomField>
    <fullName>cs_Title_of_Account_ACH_Int__c</fullName>
    <label>Title of Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>