force-app/main/default/objects/LLC_BI__Deposit__c/fields/cs_Type_of_Account_ACH_Int__c.field-meta.xml
<CustomField>
    <fullName>cs_Type_of_Account_ACH_Int__c</fullName>
    <inlineHelpText>Required if Interest Payment Type is &quot;Automatic Transfer (ACH)&quot; and the account to receive interest is an external account.</inlineHelpText>
    <label>Type of Account to Receive Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Money Market</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>