force-app/main/default/objects/LLC_BI__Deposit__c/fields/Deposit_Account_Type_Custom__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Type_Custom__c</fullName>
    <description>Custom field to capture the deposit account type for MagicWrighter Funding.</description>
    <formula>IF(
ISPICKVAL(LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Category__c, &apos;Checking&apos;), &apos;Checking&apos;,
IF(
ISPICKVAL(LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Category__c, &apos;Savings&apos;), &apos;Savings&apos;,
IF(
ISPICKVAL(LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Category__c, &apos;Certificate of Deposit&apos;), &apos;Savings&apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Account Type Custom</label>
    <type>Text</type>
</CustomField>