force-app/main/default/objects/LLC_BI__Deposit__c/fields/Full_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Product_Name__c</fullName>
    <description>Combined product, line and type</description>
    <formula>text( LLC_BI__Product__c) &amp; &quot; - &quot; &amp; text(LLC_BI__Product_Line__c) &amp; &quot; - &quot; &amp; text( LLC_BI__Product_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Product Name</label>
    <type>Text</type>
</CustomField>